autumn/tests/compile-fail/repository_hooks_not_default_1_95.stderr
error[E0277]: the trait bound `BadHooks: RepositoryHooksDefault` is not satisfied
  --> tests/compile-fail/repository_hooks_not_default_1_95.rs:33:40
   |
33 | #[autumn_web::repository(Item, hooks = BadHooks)]
   |                                        ^^^^^^^^ the trait `std::default::Default` is not implemented for `BadHooks`
   |
   = note: required for `BadHooks` to implement `RepositoryHooksDefault`
help: consider annotating `BadHooks` with `#[derive(Default)]`
   |
25 + #[derive(Default)]
26 | pub struct BadHooks;
   |

error[E0277]: the trait bound `BadHooks: RepositoryHooksClone` is not satisfied
  --> tests/compile-fail/repository_hooks_not_default_1_95.rs:33:40
   |
33 | #[autumn_web::repository(Item, hooks = BadHooks)]
   |                                        ^^^^^^^^ the trait `Clone` is not implemented for `BadHooks`
   |
   = note: required for `BadHooks` to implement `RepositoryHooksClone`
help: consider annotating `BadHooks` with `#[derive(Clone)]`
   |
25 + #[derive(Clone)]
26 | pub struct BadHooks;
   |
